# proj

./: .gitignore  atlas.py  pyproject.toml  read_sensor.py  read_sensor_ezo.py
docker/: Dockerfile  Dockerfilef.txt  build_image.sh  requirements.txt
gpio_exp/: mcp23017_exp.py
mcp23017_boards/: high_power_board.py  mid_power_board.py
playground/atlas_sensors.py/: atlas_ezo.py  get_addresses.py
playground/gpio_exp/: mcp23017_relay_control.py
src/playground/airtemhum_sensors/airtemhum_sensors/: sensor_dht20.py  sensor_scd30.py
src/playground/atlas_sensors/: read_sensor.py
src/playground/controller/: controller.py  controller_node_gpt.py
src/playground/ec_sensor/: atlas_ezo_ec_sensor.py  ezo_ec_sensor.py
src/playground/gpio_simple_ctrl/: gpio_ext_test.py  mcp23017_relay_control.py
src/playground/mcp23017_boards/: high_power_board.py  mid_power_board.py
src/playground/peristaltic_pump/: ezo_peristaltic_pump.py  peristaltic_pump.py
src/playground/ph_calibration/: ph_calibration.py
src/playground/ph_sensor/: ezo_ph_sensor.py
src/playground/pressure_sensor/: ezo_pressure_sensor.py
src/playground/water_flow_meter/: ezo_flow_meter.py
src/playground/water_temp_sensor/: ezo_rtd_sensor.py
src/water_level_sensor/: water_level_sensor.py
tools/: start_docker.sh
vat/: vat.py
vat/peristaltic_pump/: peristaltic_pump.py
water_level_sensor/: water_level_sensor.py
